// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigToggleSlider.test.js renders 1`] = `
<div
  checked="checked"
  id="config-toggle-slider-content"
>
  <div
    class="form-group"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-2"
      >
        <label
          class="control-label"
          for="test-id"
        >
          <span>
            test-label
          </span>
        </label>
      </div>
       
      <div
        class="col-sm-10 content"
      >
        <togglebutton-stub
          height="22"
          id="test-id"
          margin="3"
          name="test-id"
          speed="300"
          sync="true"
          width="45"
        />
         
        <p>
          explanation 1
        </p>
        <p>
          explanation 2
        </p>
          
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigToggleSlider.test.js renders with experimental flag, experimental features disabled 1`] = `<!---->`;

exports[`ConfigToggleSlider.test.js renders with experimental flag, experimental features enabled 1`] = `
<div
  checked="checked"
  id="config-toggle-slider-content"
>
  <div
    class="form-group"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-2"
      >
        <label
          class="control-label"
          for="test-id"
        >
          <span>
            test-label
          </span>
        </label>
      </div>
       
      <div
        class="col-sm-10 content"
      >
        <togglebutton-stub
          height="22"
          id="test-id"
          margin="3"
          name="test-id"
          speed="300"
          sync="true"
          width="45"
        />
         
        <p>
          explanation 1
        </p>
        <p>
          explanation 2
        </p>
          
        <span
          style="color: red;"
        >
          This is an experimental feature
        </span>
      </div>
    </div>
  </div>
</div>
`;
